--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2951,9 +2951,12 @@ headerbar button.titlebutton,
     .titlebar button.titlebutton.maximize:backdrop,
     .titlebar button.titlebutton.minimize:backdrop {
       opacity: 1; }
+  .titlebar.default-decoration button.titlebutton.close {
+    border-radius: 0 8px 0 0;}
+  .maximized .titlebar button.titlebutton.close {
+    border-radius: 0;}
   headerbar button.titlebutton.close,
   .titlebar button.titlebutton.close {
-    border-radius: 0 8px 0 0;
     background-image: -gtk-scaled(url("assets/titlebutton-close-dark.png"), url("assets/titlebutton-close-dark@2.png")); }
   headerbar button.titlebutton.close:backdrop,
   .titlebar button.titlebutton.close:backdrop {
@@ -2972,13 +2975,13 @@ headerbar button.titlebutton,
     background-image: -gtk-scaled(url("assets/titlebutton-max-dark.png"), url("assets/titlebutton-max-dark@2.png")); }
   .maximized headerbar button.titlebutton.maximize,
   .maximized .titlebar button.titlebutton.maximize {
-    background-image: -gtk-scaled(url("assets/titlebutton-restore-focused.png"), url("assets/titlebutton-max-dark@2.png")); }
+    background-image: -gtk-scaled(url("assets/titlebutton-restore-focused.png"), url("assets/titlebutton-restore-focused@2.png")); }
   headerbar button.titlebutton.maximize:backdrop,
   .titlebar button.titlebutton.maximize:backdrop {
     background-image: -gtk-scaled(url("assets/titlebutton-max-backdrop-dark.png"), url("assets/titlebutton-max-backdrop-dark@2.png")); }
   .maximized headerbar button.titlebutton.maximize:backdrop,
   .maximized .titlebar button.titlebutton.maximize:backdrop {
-    background-image: -gtk-scaled(url("assets/titlebutton-restore-unfocused.png"), url("assets/titlebutton-max-dark@2.png")); }    
+    background-image: -gtk-scaled(url("assets/titlebutton-restore-unfocused.png"), url("assets/titlebutton-restore-unfocused@2.png")); }    
   headerbar button.titlebutton.maximize:hover,
   .titlebar button.titlebutton.maximize:hover {
     background-color: #484957; }
