--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -9,14 +9,14 @@ stage {
   padding: 5px 32px;
   transition-duration: 0;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #212831;
+  background-color:rgba(64, 60, 73, 0.95);
   border: 1px solid #202020;
   box-shadow: inset 0 2px 4px rgba(69, 69, 69, 0.05); }
   .sound-button, .modal-dialog-button-box .modal-dialog-button, .notification-button, .notification-icon-button, .popup-menu #notification .notification-button, .popup-menu #notification .notification-icon-button {
     border-radius: 2px; }
   .sound-button:focus, .modal-dialog-button-box .modal-dialog-button:focus, .notification-button:focus, .notification-icon-button:focus, .popup-menu #notification .notification-button:focus, .popup-menu #notification .notification-icon-button:focus {
     color: rgba(255, 255, 255, 0.87);
-    background-color: #212831;
+    background-color: rgba(64, 60, 73, 0.95);
     border: 1px solid #1f9ede;
     box-shadow: inset 0 2px 4px rgba(69, 69, 69, 0.05); }
   .sound-button:hover, .modal-dialog-button-box .modal-dialog-button:hover, .notification-button:hover, .notification-icon-button:hover, .popup-menu #notification .notification-button:hover, .popup-menu #notification .notification-icon-button:hover {
