--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -1756,3 +1756,304 @@ StScrollBar {
   border: 0px;
   background-color: rgba(0, 0, 0, 0);
   border-radius: 0px; }
+
+/* mint 22.x */
+
+.prompt-dialog-error-label, .prompt-dialog-info-label, .prompt-dialog-null-label, .run-dialog-description, .message-dialog-content .message-dialog-caption, .dialog-list .dialog-list-box .dialog-list-item .dialog-list-item-description {
+  font-weight: 400;
+  font-size: 0.818em; }
+
+.message-dialog-content .message-dialog-title, .dialog .confirm-dialog-title {
+  font-weight: 800;
+  font-size: 1.364em; }
+
+.workspace-switch-osd, .media-keys-osd, .message-dialog-content .message-dialog-title.lightweight {
+  font-weight: 700;
+  font-size: 1.182em; }
+
+.polkit-dialog-user-combo, .dialog-list .dialog-list-title {
+  font-weight: 700;
+  font-size: 1em; }
+
+.audio-device-selection-dialog .audio-selection-box .audio-selection-device, .polkit-dialog-user-combo {
+  border: 1px solid #191e25;
+  color: #e1e1e1;
+  background-color: #191e25; }
+  .audio-device-selection-dialog .audio-selection-box .audio-selection-device:focus, .polkit-dialog-user-combo:focus {
+    border: 1px solid #191e25;
+    color: #e1e1e1;
+    background-color: #191e25;
+    border: 1px solid #6a6a77; }
+  .audio-device-selection-dialog .audio-selection-box .audio-selection-device:hover, .polkit-dialog-user-combo:hover {
+    border: 1px solid #191e25;
+    color: #e1e1e1;
+    background-color: #3a3a41; }
+  .audio-device-selection-dialog .audio-selection-box .audio-selection-device:insensitive, .polkit-dialog-user-combo:insensitive {
+    border: 1px solid #191e25;
+    color: rgba(225, 225, 225, 0.5);
+    background-color: #191e25; }
+  .audio-device-selection-dialog .audio-selection-box .audio-selection-device:selected, .polkit-dialog-user-combo:selected, .audio-device-selection-dialog .audio-selection-box .audio-selection-device:active, .polkit-dialog-user-combo:active {
+    border: 1px solid #191e25;
+    color: #e1e1e1;
+    background-color: #2e2e33; }
+  .audio-device-selection-dialog .audio-selection-box .audio-selection-device:checked, .polkit-dialog-user-combo:checked {
+    border: 1px solid #191e25;
+    color: #e1e1e1;
+    background-color: #2e2e33; }
+
+.dialog .dialog-button, .dialog .dialog-button:destructive-action, .dialog .dialog-button:default {
+  font-weight: bold;
+  padding: 12px;
+  border-radius: 18px;
+  border: 1px solid #2b2f34;
+  color: #e1e1e1;
+  background-color: #2b2f34; }
+  .dialog .dialog-button:focus {
+    border: 1px solid #2b2f34;
+    color: #e1e1e1;
+    background-color: #2b2f34;
+    border: 1px solid #797987; }
+  .dialog .dialog-button:hover {
+    border: 1px solid #2b2f34;
+    color: #e1e1e1;
+    background-color: #494951; }
+  .dialog .dialog-button:active {
+    border: 1px solid #2b2f34;
+    color: #e1e1e1;
+    background-color: #3c3c44; }
+  .dialog .dialog-button:checked {
+    border: 1px solid #2b2f34;
+    color: #e1e1e1;
+    background-color: #3c3c44; }
+  .dialog .dialog-button:insensitive {
+    border: 1px solid #2b2f34;
+    color: rgba(225, 225, 225, 0.5);
+    background-color: #29292e; }
+
+.dialog .dialog-button:default {
+  border: 1px solid #1f9ede;
+  color: #e1e1e1;
+  background-color: #1f9ede; }
+  .dialog .dialog-button:focus:default {
+    border: 1px solid #1f9ede;
+    color: #e1e1e1;
+    background-color: #1f9ede;
+    border: 1px solid #a4d8f2; }
+  .dialog .dialog-button:hover:default {
+    border: 1px solid #1f9ede;
+    color: #e1e1e1;
+    background-color: #4ab2e6; }
+  .dialog .dialog-button:active:default {
+    border: 1px solid #1f9ede;
+    color: #e1e1e1;
+    background-color: #34a8e3; }
+  .dialog .dialog-button:checked:default {
+    border: 1px solid #1f9ede;
+    color: #e1e1e1;
+    background-color: #34a8e3; }
+  .dialog .dialog-button:insensitive:default {
+    border-color: #2b2f34;
+    border: 1px solid #2b2f34;
+    color: rgba(225, 225, 225, 0.5);
+    background-color: #29292e; }
+
+.dialog .dialog-button:destructive-action {
+  border: 1px solid #c01c28;
+  color: #e1e1e1;
+  background-color: #c01c28; }
+  .dialog .dialog-button:focus:destructive-action {
+    border: 1px solid #c01c28;
+    color: #e1e1e1;
+    background-color: #c01c28;
+    border: 1px solid #ee878f; }
+  .dialog .dialog-button:hover:destructive-action {
+    border: 1px solid #c01c28;
+    color: #e1e1e1;
+    background-color: #e12e3b; }
+  .dialog .dialog-button:active:destructive-action {
+    border: 1px solid #c01c28;
+    color: #e1e1e1;
+    background-color: #d61f2d; }
+  .dialog .dialog-button:checked:destructive-action {
+    border: 1px solid #c01c28;
+    color: #e1e1e1;
+    background-color: #d61f2d; }
+  .dialog .dialog-button:insensitive:destructive-action {
+    border-color: #2b2f34;
+    border: 1px solid #2b2f34;
+    color: rgba(225, 225, 225, 0.5);
+    background-color: #29292e; }
+
+.dialog {
+  background-color: #191e25;
+  border-radius: 18px;
+  border: 1px solid #2b2f34;
+  padding: 18px; }
+  .dialog .dialog-content-box {
+    margin-top: 8px;
+    margin-bottom: 16px;
+    spacing: 32px;
+    max-width: 28em; }
+  .dialog .confirm-dialog-title {
+    text-align: center; }
+
+.dialog-list {
+  spacing: 18px; }
+  .dialog-list .dialog-list-title {
+    text-align: center; }
+  .dialog-list .dialog-list-scrollview {
+    max-height: 200px; }
+  .dialog-list .dialog-list-box {
+    spacing: 1em; }
+    .dialog-list .dialog-list-box .dialog-list-item {
+      spacing: 1em; }
+      .dialog-list .dialog-list-box .dialog-list-item .dialog-list-item-title {
+        font-weight: bold; }
+      .dialog-list .dialog-list-box .dialog-list-item .dialog-list-item-description {
+        color: #d4d4d4; }
+
+.end-session-dialog {
+  min-width: 40em; }
+  .end-session-dialog .dialog-content-box {
+    spacing: 0; }
+  .end-session-dialog .dialog-list {
+    spacing: 0; }
+    .end-session-dialog .dialog-list .dialog-list-title {
+      color: #F27835;
+      background-color: tranparentize(#F27835, 0.9);
+      padding: 9px;
+      border-radius: 20px;
+      margin: 4px 0; }
+
+.message-dialog-content {
+  spacing: 18px; }
+  .message-dialog-content .message-dialog-title {
+    text-align: center; }
+  .message-dialog-content .message-dialog-description {
+    text-align: center; }
+  .message-dialog-content .message-dialog-caption {
+    text-align: center; }
+
+.run-dialog .dialog-content-box {
+  margin: 4px; }
+
+.run-dialog-description {
+  text-align: center;
+  color: #aeaeae; }
+  .run-dialog-description.error {
+    color: #FC4138; }
+
+.run-dialog-completion-box {
+  padding-top: 6px;
+  padding-left: 12px; }
+
+.run-dialog-entry {
+  width: 20em;
+  height: 1.2em; }
+
+.prompt-dialog {
+  width: 28em; }
+  .prompt-dialog .dialog-content-box {
+    spacing: 16px;
+    margin-bottom: 12px; }
+  .prompt-dialog-password-entry {
+    width: 20em; }
+  .prompt-dialog-password-layout {
+    spacing: 8px; }
+  .prompt-dialog-error-label, .prompt-dialog-info-label, .prompt-dialog-null-label {
+    text-align: center; }
+  .prompt-dialog-error-label {
+    color: #FC4138; }
+
+.polkit-dialog-user-layout {
+  text-align: center;
+  spacing: 2px; }
+
+.polkit-dialog-user-combo {
+  border-radius: 6px;
+  padding: 6px 36px; }
+  .polkit-dialog-user-combo:insensitive {
+    color: #e1e1e1; }
+
+.audio-device-selection-dialog {
+  min-width: 24em; }
+  .audio-device-selection-dialog .audio-selection-box {
+    spacing: 12px; }
+    .audio-device-selection-dialog .audio-selection-box .audio-selection-device {
+      border-radius: 20px; }
+      .audio-device-selection-dialog .audio-selection-box .audio-selection-device .audio-selection-device-box {
+        padding: 12px;
+        spacing: 12px; }
+      .audio-device-selection-dialog .audio-selection-box .audio-selection-device .audio-selection-device-icon {
+        icon-size: 64px; }
+
+.workspace-switch-osd, .info-osd, .media-keys-osd {
+  background-color: #191e25;
+  border: 1px solid #2b2f34;
+  border-radius: 20px;
+  text-align: center;
+  padding: 24px; }
+
+.media-keys-osd {
+  margin-bottom: 1em;
+  border-radius: 20px;
+  font-weight: bold;
+  spacing: 12px;
+  padding: 12px 24px; }
+  .media-keys-osd > * {
+    spacing: 12px; }
+  .media-keys-osd StIcon {
+    icon-size: 32px; }
+  .media-keys-osd StLabel:ltr {
+    margin-right: 6px; }
+  .media-keys-osd StLabel:rtl {
+    margin-left: 6px; }
+  .media-keys-osd .level {
+    min-width: 160px;
+    -barlevel-height: 6px;
+    -barlevel-background-color: #2b2f34;
+    -barlevel-active-background-color: #e1e1e1;
+    -barlevel-amplify-color: #F27835;
+    -barlevel-amplify-separator-width: 3px; }
+    .media-keys-osd .level:ltr {
+      margin-right: 6px; }
+    .media-keys-osd .level:rtl {
+      margin-left: 6px; }
+  .media-keys-osd .level-bar {
+    border-radius: 20px;
+    background-color: #e1e1e1; }
+
+.info-osd {
+  font-size: 1.2em;
+  font-weight: 700;
+  text-align: center; }
+
+.workspace-switch-osd {
+  min-width: 140px;
+  margin-bottom: 1em;
+  border-radius: 20px;
+  font-weight: bold;
+  padding: 12px 36px 0 36px; }
+  .workspace-switch-osd-indicator-box {
+    spacing: 12px; }
+  .workspace-switch-osd-indicator {
+    background-color: rgba(225, 225, 225, 0.5);
+    padding: 3px;
+    margin: 15px;
+    border-radius: 36px; }
+    .workspace-switch-osd-indicator:active {
+      background-color: #1f9ede;
+      padding: 6px;
+      margin: 12px; }
+
+.monitor-label {
+  border-radius: 0;
+  color: black;
+  padding: 12px;
+  text-align: center; }
+
+.resize-popup {
+  color: #e1e1e1;
+  background-color: #191e25;
+  border-radius: 6px;
+  padding: 12px; }
