--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -786,7 +786,7 @@ toolbar, .inline-toolbar {
   border-image: linear-gradient(to bottom, @dark_gray_main, #0d0d0d) 1 0 1 0; }
 
 .inline-toolbar {
-  background-color: #303030;
+  background-color: @theme_bg_color;
   border-style: solid;
   border-color: @border_dark;
   border-width: 0 1px 1px;
@@ -803,7 +803,7 @@ searchbar {
 actionbar {
   padding: 6px;
   border-top: 1px solid @border_dark;
-  background-color: #303030; }
+  background-color: @theme_bg_color; }
 
 headerbar,
 .titlebar:not(headerbar) {
@@ -3244,7 +3244,7 @@ NautilusQueryEditor .search-bar.toolbar {
     background-color: rgba(31, 158, 222, 0.8);
     border-color: rgba(25, 126, 177, 0.8); }
   .disk-space-display.free {
-    background-color: #303030;
+    background-color: @theme_bg_color;
     border-color: #171717; }
 
 NautilusListView .view, NautilusListView iconview {
