--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -2194,7 +2194,7 @@ StScrollBar {
   padding: 0; }
 
 .appmenu-category-button:hover {
-  background-color: #b0b0b8; }
+  background-color: rgba(160, 175, 186, 0.3); }
 
 .appmenu-category-button-selected {
   background-color: rgba(160, 175, 186, 0.3); }
